Added OIDC and infrastructure for development.

--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 quarkus.http.port=12000
+quarkus.devservices.enabled=false
+
+# Configure OIDC
+%dev.quarkus.oidc.auth-server-url=http://localhost:9991/realms/filearch-realm
+quarkus.oidc.client-id=filearch_restapi
+quarkus.oidc.credentials.secret=0DDA9EEB89274CFE823EAD3481B65FE4
+
+# Configure file uploads
+quarkus.http.body.handle-file-uploads=true
+quarkus.http.body.uploads-directory=./tmpUpload/
+quarkus.http.body.delete-uploaded-files-on-end=true
+quarkus.http.body.preallocate-body-buffer=false
+quarkus.http.limits.max-body-size=15G
+
