--- a/rest-api/build.gradle
+++ b/rest-api/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-arc'
     implementation 'io.quarkus:quarkus-rest:3.18.4'
     implementation "io.quarkus:quarkus-smallrye-openapi"
+    implementation "io.quarkus:quarkus-oidc"
     testImplementation 'io.quarkus:quarkus-junit5'
 }
 
