--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,4 @@ quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=3.18.4
 SPOTLESS_VERSION=7.0.2
+LOMBOK_VERSION=1.18.36
