--- a/rest-api/build.gradle
+++ b/rest-api/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-rest:3.18.4'
     implementation "io.quarkus:quarkus-smallrye-openapi"
     implementation "io.quarkus:quarkus-oidc"
+    implementation project(":common")
     testImplementation 'io.quarkus:quarkus-junit5'
 }
 
