File Storage initial

--- a/rest-api/build.gradle
+++ b/rest-api/build.gradle
@@ -8,7 +8,13 @@ dependencies {
     implementation 'io.quarkus:quarkus-rest:3.18.4'
     implementation "io.quarkus:quarkus-smallrye-openapi"
     implementation "io.quarkus:quarkus-oidc"
+    implementation("io.quarkus:quarkus-rest-jackson")
     implementation project(":common")
+
+    compileOnly "org.projectlombok:lombok:$LOMBOK_VERSION"
+
+    annotationProcessor "org.projectlombok:lombok:$LOMBOK_VERSION"
+
     testImplementation 'io.quarkus:quarkus-junit5'
 }
 
