--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,7 +5,13 @@ plugins {
 
 dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
+    implementation("io.quarkus:quarkus-flyway")
+    implementation("io.quarkus:quarkus-jdbc-postgresql")
     implementation "io.quarkus:quarkus-oidc"
+    implementation("io.quarkus:quarkus-rest-jackson")
+    implementation("org.flywaydb:flyway-database-postgresql")
+    implementation "org.jooq:jooq:$JOOQ_VERSION"
+
 
     compileOnly "org.projectlombok:lombok:$LOMBOK_VERSION"
 
