--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@ quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=3.18.4
 SPOTLESS_VERSION=7.0.2
 LOMBOK_VERSION=1.18.36
+JOOQ_VERSION=3.20.2
