--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -1,6 +1,18 @@
 quarkus.http.port=12000
 quarkus.devservices.enabled=false
 
+# configure your datasource
+filearch.dbhost=localhost
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=xnelo
+quarkus.datasource.password=buttmunch
+quarkus.datasource.jdbc.url=jdbc:postgresql://${filearch.dbhost}:5432/filearch
+
+# Run Flyway migrations automatically
+quarkus.flyway.migrate-at-start=true
+quarkus.flyway.default-schema=FILEARCH
+
 # Configure OIDC
 %dev.quarkus.oidc.auth-server-url=http://localhost:9991/realms/filearch-realm
 quarkus.oidc.client-id=filearch_restapi
@@ -12,4 +24,7 @@ quarkus.http.body.uploads-directory=./tmpUpload/
 quarkus.http.body.delete-uploaded-files-on-end=true
 quarkus.http.body.preallocate-body-buffer=false
 quarkus.http.limits.max-body-size=15G
+
+# Configure Local File Storage
+
 
