Ability to upload to local file system.

--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -8,6 +8,8 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=xnelo
 quarkus.datasource.password=buttmunch
 quarkus.datasource.jdbc.url=jdbc:postgresql://${filearch.dbhost}:5432/filearch
+quarkus.datasource.jdbc.max-size=16
+
 
 # Run Flyway migrations automatically
 quarkus.flyway.migrate-at-start=true
@@ -25,6 +27,8 @@ quarkus.http.body.delete-uploaded-files-on-end=true
 quarkus.http.body.preallocate-body-buffer=false
 quarkus.http.limits.max-body-size=15G
 
+# Configure file storage system
 # Configure Local File Storage
+
 
 
