--- a/rest-api/build.gradle
+++ b/rest-api/build.gradle
@@ -10,6 +10,9 @@ dependencies {
     implementation "io.quarkus:quarkus-oidc"
     implementation("io.quarkus:quarkus-rest-jackson")
     implementation project(":common")
+    implementation project(":jooq")
+    implementation "org.jooq:jooq:$JOOQ_VERSION"
+    implementation("io.quarkus:quarkus-jdbc-postgresql")
 
     compileOnly "org.projectlombok:lombok:$LOMBOK_VERSION"
 
