--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ LOMBOK_VERSION=1.18.36
 JOOQ_VERSION=3.20.2
 JOOQ_GENERATOR_VERSION=10.0
 JOOQ_GENERATOR_POSTGRES_DRIVER_VERSION=42.5.4
+MAPSTRUCT_VERSION=1.6.3
