Added encryption to the Users table.

--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -10,6 +10,10 @@ quarkus.datasource.password=buttmunch
 quarkus.datasource.jdbc.url=jdbc:postgresql://${filearch.dbhost}:5432/filearch
 quarkus.datasource.jdbc.max-size=16
 
+# ENCRYPTION KEY !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+filearch.encryption-key=${FILEARCH_ENCRYPTION_KEY:LOCAL_DEV_DEFAULT}
+# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
 
 # Run Flyway migrations automatically
 quarkus.flyway.migrate-at-start=true
