Added ability to download files on server.

--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 quarkus.http.port=12000
 quarkus.devservices.enabled=false
 
+# CORS configuration
+quarkus.http.cors.enabled=true
+%dev.quarkus.http.cors.origins=/.*/
+quarkus.http.cors.methods=GET
+quarkus.http.cors.exposed-headers=Content-Disposition
+quarkus.http.cors.access-control-max-age=24H
+quarkus.http.cors.access-control-allow-credentials=true
+
 # configure your datasource
 filearch.dbhost=localhost
 
@@ -13,7 +21,6 @@ quarkus.datasource.jdbc.max-size=16
 # ENCRYPTION KEY !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 filearch.encryption-key=${FILEARCH_ENCRYPTION_KEY:LOCAL_DEV_DEFAULT}
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-
 
 # Run Flyway migrations automatically
 quarkus.flyway.migrate-at-start=true
