Removed unused test. Updated jooq project to not apply spotless to files.

--- a/jooq/build.gradle
+++ b/jooq/build.gradle
@@ -11,6 +11,14 @@ spotlessCheck {
     enabled = false
 }
 
+spotlessJavaApply{
+    enabled = false
+}
+
+spotlessJavaCheck{
+    enabled = false
+}
+
 String DB_HOST_ADDRESS = System.getenv("FILEARCH_DB_HOST_ADDRESS") ?: "localhost"
 
 jooq {
