--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -18,10 +18,6 @@ quarkus.datasource.password=buttmunch
 quarkus.datasource.jdbc.url=jdbc:postgresql://${filearch.dbhost}:5432/filearch
 quarkus.datasource.jdbc.max-size=16
 
-# ENCRYPTION KEY !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-filearch.encryption-key=${FILEARCH_ENCRYPTION_KEY:LOCAL_DEV_DEFAULT}
-# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-
 # Run Flyway migrations automatically
 quarkus.flyway.migrate-at-start=true
 quarkus.flyway.default-schema=FILEARCH
@@ -40,6 +36,12 @@ quarkus.http.limits.max-body-size=15G
 
 # Configure file storage system
 # Configure Local File Storage
+
+# ENCRYPTION KEY !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+filearch.encryption-key=${FILEARCH_ENCRYPTION_KEY:LOCAL_DEV_DEFAULT}
+# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+filearch.bulk-actions.max-delete=100
 
 
 
