Finished delete folder logic.

--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -9,13 +9,10 @@ quarkus.http.cors.exposed-headers=Content-Disposition
 quarkus.http.cors.access-control-max-age=24H
 quarkus.http.cors.access-control-allow-credentials=true
 
-# configure your datasource
-filearch.dbhost=localhost
-
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=xnelo
 quarkus.datasource.password=buttmunch
-quarkus.datasource.jdbc.url=jdbc:postgresql://${filearch.dbhost}:5432/filearch
+quarkus.datasource.jdbc.url=jdbc:postgresql://${filearch.db-host}:5432/filearch
 quarkus.datasource.jdbc.max-size=16
 
 # Run Flyway migrations automatically
@@ -36,6 +33,9 @@ quarkus.http.limits.max-body-size=15G
 
 # Configure file storage system
 # Configure Local File Storage
+
+# configure your datasource
+filearch.db-host=localhost
 
 # ENCRYPTION KEY !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 filearch.encryption-key=${FILEARCH_ENCRYPTION_KEY:LOCAL_DEV_DEFAULT}
