Sending messages to processor microservice.

--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -9,11 +9,18 @@ quarkus.http.cors.exposed-headers=Content-Disposition
 quarkus.http.cors.access-control-max-age=24H
 quarkus.http.cors.access-control-allow-credentials=true
 
+# Configure Datasource
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=xnelo
 quarkus.datasource.password=buttmunch
 quarkus.datasource.jdbc.url=jdbc:postgresql://${filearch.db-host}:5432/filearch
 quarkus.datasource.jdbc.max-size=16
+
+# Configure Rabbit MQ
+rabbitmq-host=localhost
+rabbitmq-port=5672
+mp.messaging.outgoing.file-proc-requests.connector=smallrye-rabbitmq
+mp.messaging.outgoing.file-proc-requests.exchange.name=file-process-requests
 
 # Configure OIDC
 %dev.quarkus.oidc.auth-server-url=http://localhost:9991/realms/filearch-realm
