--- a/rest-api/build.gradle
+++ b/rest-api/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation "io.quarkus:quarkus-smallrye-openapi"
     implementation "io.quarkus:quarkus-oidc"
     implementation("io.quarkus:quarkus-rest-jackson")
+    implementation("io.quarkus:quarkus-messaging-rabbitmq")
     implementation project(":common")
     implementation project(":jooq")
     implementation "org.jooq:jooq:$JOOQ_VERSION"
