--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ pluginManagement {
 }
 rootProject.name='filearch'
 include 'rest-api'
+include 'file-processor'
 include 'common'
 include 'jooq'
 
