Send actual data to File Processor.

--- a/file-processor/build.gradle
+++ b/file-processor/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-arc'
     implementation("io.quarkus:quarkus-rest-jackson")
     implementation("io.quarkus:quarkus-messaging-rabbitmq")
+    implementation project(":common")
 
     compileOnly "org.projectlombok:lombok:$LOMBOK_VERSION"
 
