--- a/file-processor/src/main/resources/application.properties
+++ b/file-processor/src/main/resources/application.properties
@@ -7,3 +7,13 @@ rabbitmq-port=5672
 mp.messaging.incoming.file-proc-requests.connector=smallrye-rabbitmq
 mp.messaging.incoming.file-proc-requests.exchange.name=file-process-requests
 mp.messaging.incoming.file-proc-requests.queue.name=file-process-requests-queue
+mp.messaging.incoming.file-proc-requests.auto-bind-dlq=true
+mp.messaging.incoming.file-proc-requests.dlx.declare=true
+mp.messaging.incoming.file-proc-requests.dead-letter-dlx=file-process-requests
+mp.messaging.incoming.file-proc-requests.dead-letter-queue-name=file-process-requests-queue-dlq
+mp.messaging.incoming.file-proc-requests.dead-letter-exchange=file-process-requests-dead
+mp.messaging.incoming.file-proc-requests.dead-letter-exchange-type=direct
+
+# Configure the number of concurrent workers
+smallrye.messaging.worker.file-proc-workers.max-concurrency=10
+%dev.smallrye.messaging.worker.file-proc-workers.max-concurrency=2
