--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ pluginManagement {
 rootProject.name='filearch'
 include 'rest-api'
 include 'file-processor'
+include 'file-processor-api'
 include 'common'
 include 'jooq'
 
