process uploaded images (#7)
* Sending messages to processor microservice.

* Added basic file processor.

* Send actual data to File Processor.

* Moved storage service to common and started code for FileProcessorHandler to retrieve file.

* Added processor logic and a thumbnail image generator processor.

* Updated thumbnail generator to generate jpeg images, added .jpg to filename, calculate actual ration height.

* Added ability to download thumbnail image of a file (if it exists).

* Clean up unused exception.

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,8 @@ pluginManagement {
 }
 rootProject.name='filearch'
 include 'rest-api'
+include 'file-processor'
+include 'file-processor-api'
 include 'common'
 include 'jooq'
 
