--- a/file-processor/build.gradle
+++ b/file-processor/build.gradle
@@ -5,18 +5,11 @@ plugins {
 dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-arc'
-    implementation 'io.quarkus:quarkus-rest:3.18.4'
-    implementation "io.quarkus:quarkus-smallrye-openapi"
-    implementation "io.quarkus:quarkus-oidc"
     implementation("io.quarkus:quarkus-rest-jackson")
     implementation("io.quarkus:quarkus-messaging-rabbitmq")
-    implementation project(":common")
-    implementation project(":jooq")
-    implementation "org.jooq:jooq:$JOOQ_VERSION"
     implementation "org.mapstruct:mapstruct:${MAPSTRUCT_VERSION}"
-    implementation("io.quarkus:quarkus-jdbc-postgresql")
-    implementation("io.quarkus:quarkus-hibernate-validator")
-
+    implementation project(":common")
+    implementation project(":file-processor-api")
 
     compileOnly "org.projectlombok:lombok:$LOMBOK_VERSION"
 
@@ -26,3 +19,9 @@ dependencies {
     testImplementation 'io.quarkus:quarkus-junit5'
 }
 
+compileJava {
+    options.compilerArgs += [
+            '-Amapstruct.unmappedTargetPolicy=ERROR',
+            '-Amapstruct.verbose=true'
+    ]
+}
