Added the artifact concept to processors.

--- a/file-processor/src/main/resources/application.properties
+++ b/file-processor/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 quarkus.http.port=12001
 quarkus.devservices.enabled=false
 
+# Configure Datasource
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=xnelo
+quarkus.datasource.password=buttmunch
+quarkus.datasource.jdbc.url=jdbc:postgresql://${filearch.db-host}:5432/filearch
+quarkus.datasource.jdbc.max-size=16
+
 # Configure Rabbit MQ
 rabbitmq-host=localhost
 rabbitmq-port=5672
@@ -17,3 +24,6 @@ mp.messaging.incoming.file-proc-requests.dead-letter-exchange-type=direct
 # Configure the number of concurrent workers
 smallrye.messaging.worker.file-proc-workers.max-concurrency=10
 %dev.smallrye.messaging.worker.file-proc-workers.max-concurrency=2
+
+# configure your datasource
+filearch.db-host=localhost
