added rabbitmq docker setup.

--- a/file-processor/src/main/resources/application.properties
+++ b/file-processor/src/main/resources/application.properties
@@ -11,6 +11,8 @@ quarkus.datasource.jdbc.max-size=16
 # Configure Rabbit MQ
 rabbitmq-host=localhost
 rabbitmq-port=5672
+rabbitmq-username=${RABBIT_MQ_USER:xnelo}
+rabbitmq-password=${RABBIT_MQ_PASSWORD:buttmunch}
 mp.messaging.incoming.file-proc-requests.connector=smallrye-rabbitmq
 mp.messaging.incoming.file-proc-requests.exchange.name=file-process-requests
 mp.messaging.incoming.file-proc-requests.queue.name=file-process-requests-queue
