--- a/filearch-db-migration/flyway.toml
+++ b/filearch-db-migration/flyway.toml
@@ -29,3 +29,8 @@ ignoreNewlinesInTextObjects = "off"
 url = "jdbc:postgresql://192.168.1.205:5432/filearch"
 schemas = [ "FILEARCH" ]
 displayName = "Xnelo Media DB"
+
+[environments.Localhost]
+url = "jdbc:postgresql://localhost:5432/filearch"
+schemas = [ "FILEARCH" ]
+displayName = "Localhost"
