--- a/rest-api/src/main/resources/application.properties
+++ b/rest-api/src/main/resources/application.properties
@@ -19,6 +19,8 @@ quarkus.datasource.jdbc.max-size=16
 # Configure Rabbit MQ
 rabbitmq-host=localhost
 rabbitmq-port=5672
+rabbitmq-username=${RABBIT_MQ_USER:xnelo}
+rabbitmq-password=${RABBIT_MQ_PASSWORD:buttmunch}
 mp.messaging.outgoing.file-proc-requests.connector=smallrye-rabbitmq
 mp.messaging.outgoing.file-proc-requests.exchange.name=file-process-requests
 
